<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:text="@string/sensor_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/sensor_list_launcher" android:layout_weight="1"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1">
            <Button
                android:text="@string/sensor_presence"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/sensor_presence_launcher"
                android:layout_weight="1"/>
            <Button
                android:text="@string/sensor_absence"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/sensor_absence_launcher"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:text="@string/accelerometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/accelerometer_launcher" android:layout_weight="1"/>

        <Button
            android:text="@string/direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/direction_launcher" android:layout_weight="1"/>

        <Button
            android:text="@string/shake_proximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/shake_proximity_launcher" android:layout_weight="1"/>

        <Button
            android:text="@string/geolocalization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/geolocalization_launcher" android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>